--- a/views/create.jade
+++ b/views/create.jade
@@ -30,5 +30,5 @@ html(lang='en')
         button#listallBtn.btn LIST ALL
       div
         button#listoneBtn.btn LIST ONE
-    script(type="module" src='../javascripts/new.js')
+    script(type="module" src='../javascripts/create.js')
 
