--- a/views/create.jade
+++ b/views/create.jade
@@ -10,7 +10,7 @@ html(lang='en')
     .container
       .input-group
         div
-          input#username.form-control(type='text' placeholder='Write a username.')
+          input#user_name.form-control(type='text' placeholder='Write a username.')
         div
           input#mail.form-control(type='text' placeholder='Write a e-mail.')
         div
@@ -30,5 +30,5 @@ html(lang='en')
         button#listallBtn.btn LIST ALL
       div
         button#listoneBtn.btn LIST ONE
-    script(type="module" src='../javascripts/create.js')
+    script(type= "module" src='../javascripts/create.js')
 
