delete command added

--- a/views/create.jade
+++ b/views/create.jade
@@ -25,7 +25,7 @@ html(lang='en')
       div
         button#updateBtn.btn UPDATE
       div
-        button#deleteBtn.btn DELETE
+        button#deleteBtn.btn(onclick="window.location.href = 'http://localhost:2000/delete';") DELETE
       div
         button#listallBtn.btn LIST ALL
       div
