link added for list button

--- a/views/create.jade
+++ b/views/create.jade
@@ -27,6 +27,6 @@ html(lang='en')
       div
         button#deleteBtn.btn(onclick="window.location.href = 'http://localhost:2000/delete';") DELETE
       div
-        button#listoneBtn.btn LIST ONE
+        button#listoneBtn.btn(onclick="window.location.href = 'http://localhost:2000/list';") LIST ONE
     script(type= "module" src='../javascripts/create.js')
 
