--- a/views/delete.jade
+++ b/views/delete.jade
@@ -20,5 +20,5 @@ html(lang='en')
       div
         button#updateBtn.btn UPDATE
       div
-        button#listoneBtn.btn LIST ONE
+        button#listoneBtn.btn(onclick="window.location.href = 'http://localhost:2000/list';") LIST ONE
     script(type= "module" src='../javascripts/delete.js')
