--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -38,3 +38,11 @@
 #comtxt {
   text-align: center;
 }
+.id_input {
+  border-color: lightcoral;
+  width: 300px;
+  height: 30px;
+  text-align: center;
+  background-color: lightgray;
+  color: black;
+}
