update buton link add

--- a/views/create.jade
+++ b/views/create.jade
@@ -18,7 +18,7 @@ block content
       p Other Commands:
     .others
       div
-        button#updateBtn.btn UPDATE
+        button#updateBtn.btn(onclick="window.location.href = 'http://localhost:2000/update';") UPDATE
       div
         button#deleteBtn.btn(onclick="window.location.href = 'http://localhost:2000/delete';") DELETE
       div
