--- a/views/delete.jade
+++ b/views/delete.jade
@@ -12,7 +12,7 @@ block content
       div
         button#createBtn.btn(onclick="window.location.href = 'http://localhost:2000/add';") CREATE
       div
-        button#updateBtn.btn UPDATE
+        button#updateBtn.btn(onclick="window.location.href = 'http://localhost:2000/update';") UPDATE
       div
         button#listoneBtn.btn(onclick="window.location.href = 'http://localhost:2000/list';") LIST ONE
     script(type= "module" src='../javascripts/delete.js')
