--- a/views/index.jade
+++ b/views/index.jade
@@ -6,7 +6,7 @@ block content
       div
         button#createBtn.btn(onclick="window.location.href = 'http://localhost:2000/add';") CREATE
       div
-        button#updateBtn.btn UPDATE
+        button#updateBtn.btn(onclick="window.location.href = 'http://localhost:2000/update';") UPDATE
       div
         button#deleteBtn.btn(onclick="window.location.href = 'http://localhost:2000/delete';") DELETE
      div
