--- a/views/list.jade
+++ b/views/list.jade
@@ -11,7 +11,7 @@ block content
       div
         button#createBtn.btn(onclick="window.location.href = 'http://localhost:2000/add';") CREATE
       div
-        button#updateBtn.btn UPDATE
+        button#updateBtn.btn(onclick="window.location.href = 'http://localhost:2000/update';") UPDATE
       div
         button#deleteBtn.btn(onclick="window.location.href = 'http://localhost:2000/delete';") DELETE
     script(type= "module" src='../javascripts/list.js')
