--- a/views/update.jade
+++ b/views/update.jade
@@ -14,7 +14,7 @@ block content
         div
           input#ACTIVE.form-control(type='text', placeholder='Is it active ?')
         div
-          button#createBtn.btn-primary UPDATE
+          button#updateBtn.btn-primary UPDATE
     #comtxt
       p Other Commands:
     .others
